[project]
name = "pydantic-settings-export"
dynamic = ["version"]
description = "Export your Pydantic settings to a Markdown and .env.example files!"
readme = "README.md"
authors = [
    { name = "Jag_k", email = "30597878+jag-k@users.noreply.github.com" }
]
requires-python = ">=3.11"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Documentation",
    "Topic :: Utilities",
    "Environment :: Console",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
license = {file = "LICENCE"}
repository = "https://github.com/jag-k/pydantic-settings-export"
homepage = "https://github.com/jag-k/pydantic-settings-export#readme"
packages = [
    { include = "pydantic_settings_export", from = "." },
]
keywords = ["pydantic", "settings", "export", "markdown", "dotenv", "config"]
dependencies = [
    "pydantic-settings>=2",
    "pydantic>=2",
]

[project.urls]
"Homepage" = "https://github.com/jag-k/pydantic-settings-export"
"Bug Tracker" = "https://github.com/jag-k/pydantic-settings-export/issues"
"Documentation" = "https://github.com/jag-k/pydantic-settings-export#readme"

[project.scripts]
pydantic-settings-export = "pydantic_settings_export.cli:main"

[dependency-groups]
dev = [
    "mypy>=1.12.1",
    "pre-commit>=4.0.1",
    "ruff>=0.7.0",
    "ssort>=0.13.0",
    "types-pyyaml>=6.0.12.20240917",
]
tests = [
    "pytest>=8.3.3",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "pydantic_settings_export/version.py"

# https://docs.astral.sh/ruff/
[tool.ruff]
target-version = "py311"
line-length = 120
extend-exclude = [
    ".idea",
    ".vscode",
    ".fleet",
]

# https://docs.astral.sh/ruff/settings/#lint
[tool.ruff.lint]
select = [
    'F', # flake8
    'I', # isort
    'B', # flake8-bugbear
    'S', # flake8-bandit
    'UP', # pyupgrade
    'D', # pydocstyle
    'W', # pycodestyle (warnings)
    'E', # pycodestyle (errors)
    'N', # pep8-naming
    'PT', # flake8-pytest-style
    'C90', # mccabe
]
ignore = [
    'B012', # {name} inside finally blocks cause exceptions to be silenced
    'D100', # Missing docstring in public module
    'D104', # Missing docstring in public package
    'D105', # Missing docstring in magic method
    'D106', # Missing docstring in public nested class
    'D107', # Missing docstring in __init__
    'D203', # 1 blank line required before class docstring
    'D401', # First line of docstring should be in imperative mood: "{first_line}"
    'D404', # First word of the docstring should not be "This"
    'D207', # Docstring is under-indented
    'D208', # Docstring is over-indented
]



# https://docs.astral.sh/ruff/settings/#extend-per-file-ignores
[tool.ruff.lint.extend-per-file-ignores]
'__init__.py' = [
    'F401', # {name} imported but unused; consider using importlib.util.find_spec to test for availability
    'F403', # from {name} import * used; unable to detect undefined names
    'F405', # {name} may be undefined, or defined from star imports
]

# https://docs.astral.sh/ruff/settings/#lintpydocstyle
[tool.ruff.lint.pydocstyle]
convention = 'pep257'


# https://docs.astral.sh/ruff/settings/#lintmccabe
[tool.ruff.lint.mccabe]
max-complexity = 10

# https://docs.astral.sh/ruff/settings/#lintisort
[tool.ruff.lint.isort]
section-order = [
    'future',
    'standard-library',
    'third-party',
    'first-party',
    'local-folder',
]
known-first-party = ["pydantic_settings_export"]

# https://mypy.readthedocs.io/en/stable/config_file.html
[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
scripts_are_modules = true
allow_redefinition = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_no_return = false
show_error_context = true
show_column_numbers = true
show_error_codes = true
color_output = false
pretty = true
exclude = [
    '^setup\.py$',
    '^tmp\.py$',
    '^venv/',
    '^test+\.py$',
    '^conftest\.py$',
    '^tests/',
    '^prompt\.py$'
]
disable_error_code = [
    "call-arg",
]
enable_incomplete_feature = ["NewGenericSyntax"]

# https://github.com/jag-k/pydantic-settings-export
[tool.pydantic_settings_export]
project_dir = "."
default_settings = [
    "pydantic_settings_export.settings:Settings",
]
dotenv = { "name" = ".env.example" }
env_file = ".env"

[tool.pydantic_settings_export.markdown]
name = "Configuration.md"
save_dirs = [
    "docs",
    "wiki",
]
